# userscan

./: .gitignore  Cargo.toml  ChangeLog  Makefile  Makefile.toml  README.md  userscan.1.rst
fixtures/: .ignore  cache.json  cache.mp  miniegg-1-py3.5.egg
fixtures/dir1/: .gitignore  duplicated  notignored  proto-http.la  six.py  tooshort
fixtures/dir2/: ignored  lftp  lftp.offset  link
src/: cache.rs  cachemap.rs  errors.rs  main.rs  output.rs  registry.rs  scan.rs  statistics.rs  summary.rs  system.rs  walk.rs  walker.rs
src/storepaths/: cache.rs  cacheline.rs  mod.rs
src/tests/: mod.rs  profile.rs
