[package]
name = "fc-userscan"
version = "0.4.1"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = """\
Scans files for Nix store references and registers them with the Nix garbage collector.
"""
repository = "https://github.com/flyingcircusio/userscan"
readme = "README.md"
categories = ["command-line-utilities", "filesystem", "os"]
license = "BSD-3-Clause"

[dependencies]
atty = "0.2"
bytesize = "0.2"
clap = { version = "2", features = ["wrap_help"] }
colored = "1"
crossbeam = "0.3"
env_logger = "0.5"
fnv = "1"
ignore = "0.4"
lazy_static = "1"
log = "0.4"
memmap = "0.6"
minilzo = "0.2"
nix = "0.11"
regex = "1"
rmp-serde = "0.13"
serde = "1"
serde_derive = "1"
twoway = "0.1"
users = "0.7"
zip = "0.4"
cpuprofiler = {version = "*", optional = true}

[dependencies.error-chain]
version = "0.10"
default-features = false

[dev-dependencies]
tempdir = "0.3"

[features]
profile = ["cpuprofiler"]

[profile.dev]
codegen-units = 4
