[package]
name = "fc-userscan"
version = "0.4.6-dev"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
description = """\
Scans files for Nix store references and registers them with the Nix garbage collector.
"""
repository = "https://github.com/flyingcircusio/userscan"
readme = "README.md"
categories = ["command-line-utilities", "filesystem", "os"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
anyhow = "1"
atty = "0.2"
bytesize = "1.0"
chrono = "0.4"
clap = { version = "2.32", features = ["wrap_help"] }
colored = "1.6"
crossbeam = "0.7"
env_logger = "0.7"
fnv = "1.0"
ignore = "0.4"
lazy_static = "1.1"
log = "0.4"
memmap = "0.7"
minilzo = "0.2"
nix = "0.17"
num_cpus = "1"
probes = "0.3"
regex = "1"
rmp = "0.8"
rmp-serde = "0.14"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
thiserror = "1"
twoway = "0.1"
users = "0.9"
zip = "0.5"

[patch.crates-io]
probes = { git = "https://github.com/appsignal/probes-rs", rev = "84d9acfa8e80"}

[dev-dependencies]
tempdir = "0.3"

[profile.release]
lto = "thin"
